--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -43,8 +43,30 @@ html {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+button {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #f17713;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    width: 100%;
+}
+
 .menu li:hover {
     background-color: #0099cc;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: #0099cc;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    cursor: pointer;
 }
 
 .row::after {
