--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -53,6 +53,15 @@ button {
     width: 100%;
 }
 
+img {
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+    height: 20em;
+}
+
 .menu li:hover {
     background-color: #0099cc;
 }
