--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -2,7 +2,9 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
+    margin: 0px;
+    padding: 0px;
     font-family: "Lucida Sans", sans-serif;
 }
 
@@ -20,7 +22,8 @@ html {
     border: 1px solid red;
 }
 
-.header {
+header {
+    text-align: center;
     background-color: #9933cc;
     color: #ffffff;
     padding: 15px;
